<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_calorie_tracking"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_calorie_tracking" />
    <item
        android:id="@+id/navigation_sleep_tracking"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_sleep_tracking" />
    <item
        android:id="@+id/navigation_training"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_training" />
    <item
        android:id="@+id/navigation_knowledge"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_knowledge" />
    <item
        android:id="@+id/navigation_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="Logout" />
</menu>